--- a/packages/read-step-calc-aabb/src/index.html
+++ b/packages/read-step-calc-aabb/src/index.html
@@ -7,17 +7,8 @@
 
 <body>
     <h1>STEP 파일 AABB 계산기</h1>
-    <input type="file" id="stepFileInput" accept=".step,.stp" />
-    <div id="result"></div>
-
-    <script>
-        document.getElementById('stepFileInput').addEventListener('change', function (event) {
-            const file = event.target.files[0]
-            if (file) {
-                handleSTEPFile(file)
-            }
-        });
-    </script>
+    <input type="file" id="stepFileInput" accept=".step,.stp">
+    <div id="result">
 </body>
 
 </html>
