--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<!doctype html><html><head><title>STEP 파일 AABB 계산기</title><script defer="defer" src="main.bundle.js"></script></head><body><h1>STEP 파일 AABB 계산기</h1><input type="file" id="stepFileInput" accept=".step,.stp"><div id="result"></div></body></html>
+<!doctype html><html><head><title>cad and ocjs</title><script defer="defer" src="main.bundle.js"></script></head><body><h1>cad and ocjs</h1><a href="/calc_aabb">cad 파일 AABB 계산기</a> <a href="/render_threejs">cad 파일 Three.js 렌더링</a></body></html>
