--- a/render_threejs.html
+++ b/render_threejs.html
@@ -9,4 +9,4 @@
     #viewport {
         flex-basis: 0;
         flex-grow: 1;
-    }</style><body><div><div id="result"></div><input id="step-file" name="step-file" type="file" accept=".iges,.step,.igs,.stp"/><div id="viewport"></div><script defer="defer" src="/js/36.afd4cc36d7aa32f9b424.bundle.js"></script><script defer="defer" src="/js/525.42d66b40cee39554b5bb.bundle.js"></script><script defer="defer" src="/js/render_threejs.4eb2efce05bb04e8e121.bundle.js"></script></div></body></html>
+    }</style><body><div><div id="result"></div><input id="step-file" name="step-file" type="file" accept=".iges,.step,.igs,.stp"/><div id="viewport"></div><script defer="defer" src="./js/36.afd4cc36d7aa32f9b424.bundle.js"></script><script defer="defer" src="./js/525.42d66b40cee39554b5bb.bundle.js"></script><script defer="defer" src="./js/render_threejs.8022af968e4446aae3b9.bundle.js"></script></div></body></html>
