--- a/render_threejs.html
+++ b/render_threejs.html
@@ -1,4 +1,4 @@
-<!doctype html><html><head><title>cad and ocjs</title></head><style>body {
+<!doctype html><html><head><meta charset="utf-8"><title>cad and ocjs</title></head><style>body {
         margin: 0;
         overflow: hidden;
         height: 100vh;
@@ -9,4 +9,4 @@
     #viewport {
         flex-basis: 0;
         flex-grow: 1;
-    }</style><body><div><div id="result"></div><input id="step-file" name="step-file" type="file" accept=".iges,.step,.igs,.stp"/><div id="viewport"></div></div><script defer="defer" src="./js/36.afd4cc36d7aa32f9b424.bundle.js"></script><script defer="defer" src="./js/525.42d66b40cee39554b5bb.bundle.js"></script><script defer="defer" src="./js/render_threejs.8022af968e4446aae3b9.bundle.js"></script></body></html>
+    }</style><body><h1>cad 파일 Three.js 렌더링</h1><input id="step-file" name="step-file" type="file" accept=".iges,.step,.igs,.stp"/><div id="result"></div><div id="viewport"></div><script defer="defer" src="./js/36.afd4cc36d7aa32f9b424.bundle.js"></script><script defer="defer" src="./js/525.42d66b40cee39554b5bb.bundle.js"></script><script defer="defer" src="./js/render_threejs.8022af968e4446aae3b9.bundle.js"></script></body></html>
