--- a/packages/cad-ocjs/src/calc_aabb/index.html
+++ b/packages/cad-ocjs/src/calc_aabb/index.html
@@ -8,6 +8,8 @@
 <body>
     <h1>cad 파일 AABB 계산기</h1>
     <input id="step-file" name="step-file" type="file" accept=".iges,.step,.igs,.stp" />
+    <button class="test" name="cube.step">test cube.step</button>
+    <button class="test" name="AssemblyExample-Assembly.step">test AssemblyExample-Assembly.step</button>
     <div id="result">
 </body>
 
