--- a/packages/cad-ocjs/src/render_threejs/index.html
+++ b/packages/cad-ocjs/src/render_threejs/index.html
@@ -23,6 +23,8 @@
 <body>
     <h1>cad 파일 Three.js 렌더링</h1>
     <input id="step-file" name="step-file" type="file" accept=".iges,.step,.igs,.stp" />
+    <button class="test" name="cube.step">test cube.step</button>
+    <button class="test" name="AssemblyExample-Assembly.step">test AssemblyExample-Assembly.step</button>
     <div id="result"></div>
     <div id="viewport">
     </div>
