--- a/render_threejs.html
+++ b/render_threejs.html
@@ -9,4 +9,4 @@
     #viewport {
         flex-basis: 0;
         flex-grow: 1;
-    }</style><body><h1>cad 파일 Three.js 렌더링</h1><input id="step-file" name="step-file" type="file" accept=".iges,.step,.igs,.stp"/><div id="result"></div><div id="viewport"></div><script defer="defer" src="./js/36.afd4cc36d7aa32f9b424.bundle.js"></script><script defer="defer" src="./js/525.42d66b40cee39554b5bb.bundle.js"></script><script defer="defer" src="./js/render_threejs.8022af968e4446aae3b9.bundle.js"></script></body></html>
+    }</style><body><h1>cad 파일 Three.js 렌더링</h1><input id="step-file" name="step-file" type="file" accept=".iges,.step,.igs,.stp"/> <button class="test" name="cube.step">test cube.step</button> <button class="test" name="AssemblyExample-Assembly.step">test AssemblyExample-Assembly.step</button><div id="result"></div><div id="viewport"></div><script defer="defer" src="./js/462.af397469caf68c58925b.bundle.js"></script><script defer="defer" src="./js/525.0718257cc68befbaa690.bundle.js"></script><script defer="defer" src="./js/render_threejs.8a7081212a8652d3ee91.bundle.js"></script></body></html>
