--- a/packages/cad-ocjs/src/index.html
+++ b/packages/cad-ocjs/src/index.html
@@ -9,6 +9,7 @@
     <h1>cad and ocjs</h1>
     <a href="calc_aabb.html">cad 파일 AABB 계산기</a>
     <a href="render_threejs.html">cad 파일 Three.js 렌더링</a>
+    <a href="select_parts.html">gltf 파일 부품 선택</a>
 </body>
 
 </html>
