--- a/packages/cad-ocjs/src/index.html
+++ b/packages/cad-ocjs/src/index.html
@@ -10,6 +10,7 @@
     <a href="calc_aabb.html">cad 파일 AABB 계산기</a>
     <a href="render_threejs.html">cad 파일 Three.js 렌더링</a>
     <a href="glb_viewer.html">gltf 파일 부품 선택</a>
+    <a href="study_occt.html">studyOCC</a>
 </body>
 
 </html>
